src/test/ui/marker_trait_attr/marker-attribute-with-values.stderr
error: attribute should be empty
  --> $DIR/marker-attribute-with-values.rs:4:1
   |
LL | #[marker(always)]
   | ^^^^^^^^^^^^^^^^^

error: attribute should be empty
  --> $DIR/marker-attribute-with-values.rs:8:1
   |
LL | #[marker("never")]
   | ^^^^^^^^^^^^^^^^^^

error: attribute should be empty
  --> $DIR/marker-attribute-with-values.rs:12:1
   |
LL | #[marker(key = value)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

